--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -11,13 +11,13 @@
 
 <ion-content>
     <ion-card class="welcome-card">
-      <img src="/assets/shapes.svg" alt="" />
+      <img src="/assets/hirez.jpg" alt="" />
       <ion-card-header>
         <ion-card-subtitle>Get Started</ion-card-subtitle>
-        <ion-card-title>Welcome to Ionic</ion-card-title>
+        <ion-card-title>Bem vindo a Hi-rez</ion-card-title>
       </ion-card-header>
       <ion-card-content>
-        <p>Now that your app has been created, you'll want to start building out features and components. Check out some of the resources below for next steps.</p>
+        <p>A Hi-Rez Studios é uma desenvolvedora independente de videogames, os jogos que a Hi-Rez Studios possuem são no total de 5 porém os principais são o MOBA "Smite" em terceira pessoa e o jogo de tiro Hero "Paladins".</p>
       </ion-card-content>
     </ion-card>
     <ion-list lines="none">
