--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -24,13 +24,13 @@
       <ion-list-header>
         <ion-label>Resources</ion-label>
       </ion-list-header>
-      <ion-item href="https://ionicframework.com/docs/">
+      <ion-item href="https://www.smitegame.com/play-for-free">
         <ion-icon slot="start" color="medium" name="book"></ion-icon>
-        <ion-label>Ionic Documentation</ion-label>
+        <ion-label>Smite</ion-label>
       </ion-item>
-      <ion-item href="https://ionicframework.com/docs/building/scaffolding">
+      <ion-item href="https://www.paladins.com/">
         <ion-icon slot="start" color="medium" name="build"></ion-icon>
-        <ion-label>Scaffold Out Your App</ion-label>
+        <ion-label>Paladins</ion-label>
       </ion-item>
       <ion-item href="https://ionicframework.com/docs/layout/structure">
         <ion-icon slot="start" color="medium" name="grid"></ion-icon>
