--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -25,11 +25,11 @@
         <ion-label>Resources</ion-label>
       </ion-list-header>
       <ion-item href="https://www.smitegame.com/play-for-free">
-        <ion-icon slot="start" color="medium" name="book"></ion-icon>
-        <ion-label>Smite</ion-label>
+          <
+      <ion-label>Smite</ion-label>
       </ion-item>
       <ion-item href="https://www.paladins.com/">
-        <ion-icon slot="start" color="medium" name="build"></ion-icon>
+        <img src="assets/Paladins/icon.png">
         <ion-label>Paladins</ion-label>
       </ion-item>
       
