--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -25,7 +25,8 @@
         <ion-label>Resources</ion-label>
       </ion-list-header>
       <ion-item href="https://www.smitegame.com/play-for-free">
-          <
+       <img src="assets/smite.png">
+
       <ion-label>Smite</ion-label>
       </ion-item>
       <ion-item href="https://www.paladins.com/">
