--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -22,7 +22,7 @@
     </ion-card>
     <ion-list lines="none">
       <ion-list-header>
-        <ion-label>Resources</ion-label>
+        <ion-label>Sites</ion-label>
       </ion-list-header>
       <ion-item href="https://www.smitegame.com/play-for-free">
        <img src="assets/smite.png">
