--- a/src/app/Campeões/Campeões.page.html
+++ b/src/app/Campeões/Campeões.page.html
@@ -9,7 +9,7 @@
         </ion-toolbar>
       </ion-header>
     <ion-content>
-        Campeões - Dano
+        <h4> Campeões - Dano</h4>
         <ion-grid>
             <ion-row>
               <ion-col align-self-center name="Tyra"  id="Tyra">
@@ -18,18 +18,19 @@
                     <ion-img src="\assets\Paladins\Dano\Tyra\tyra.jpg" ionError="Tyra"> </ion-img></ion-thumbnail>
                     <h1>Tyra</h1>
                 </ion-item>
+                <h1>A Indomável</h1>
                 </ion-col>
-                <h2></h2>
+                
                 <ion-col align-self-center>
                   <ion-item  routerLink="/tosas" routerDicetion="tosas">
                       <ion-thumbnail slot = "start">
 
-                      <ion-img src="/assets/tosas.jpg" ionError="Lobo"> </ion-img></ion-thumbnail>
+                      <ion-img src="\assets\Paladins\Dano\Drogoz\drogoz.jpg" ionError="Drogoz"> </ion-img></ion-thumbnail>
                       
                       <h1>Drogoz</h1>
 
                   </ion-item>
-                  
+                  <h1>O Ganancioso</h1>
                   </ion-col>
                     
             </ion-row>
@@ -40,45 +41,198 @@
                   <ion-col align-self-center>
                     <ion-item routerLink="/leva" routerDicetion="leva" >
                         <ion-thumbnail slot = "start">
-                        <ion-img src="/assets/leva.jpg" ionError="Lobo"> </ion-img></ion-thumbnail>
-                        <h1>Transporte</h1>
+                        <ion-img src="\assets\Paladins\Dano\Cassie\cassie.jpg" ionError="Cassie"> </ion-img></ion-thumbnail>
+                        <h1>Cassie</h1>
                     </ion-item>
-                    
+                    <h1>A Filha do Caçador</h1>
                     </ion-col>
 
                     <ion-col align-self-center>
                       <ion-item routerLink="/entrega" routerDicetion="entrega">
                           <ion-thumbnail slot = "start">
-                          <ion-img src="/assets/Tele.jpg" ionError="Lobo"> </ion-img></ion-thumbnail>
-                          <h1>Entrega de Produtos</h1>
+                          <ion-img src="\assets\Paladins\Dano\Lian\lian.jpg" ionError="Lian"> </ion-img></ion-thumbnail>
+                          <h1>Lian</h1>
                       </ion-item>
+                      <h1>Herdeira da Casa Aico</h1>
                       </ion-col>
                      
                         
                 
               </ion-row>
             </ion-grid>
+            <h4> Campeões - Flanco</h4>
             <ion-grid>
+
               <ion-row>
                 <ion-col align-self-center>
                   <ion-item routerLink="/loja" routerDicetion="loja">
                       <ion-thumbnail slot = "start">
-                      <ion-img src="/assets/shop.jpg"  ionError="Lobo"> </ion-img></ion-thumbnail>
-                      <h1 >Loja PeT </h1>
+                      <ion-img src="\assets\Paladins\Flanco\Androxus\androxus.jpg"  ionError="Androxus"> </ion-img></ion-thumbnail>
+                      <h1 >Androxus </h1>
                   </ion-item>
+                  <h1>Matador de Deuses</h1>
                   </ion-col>
                   
                       <ion-col align-self-center>
                         <ion-item routerLink="/medicamentos" routerDicetion="medicamentos">
                             <ion-thumbnail slot = "start">
-                            <ion-img src="/assets/vete.png" ionError="Lobo"> </ion-img></ion-thumbnail>
-                            <h1>Medicamentos Veterinários</h1>
+                            <ion-img src="\assets\Paladins\Flanco\Evie\evie.jpg" ionError="Lobo"> </ion-img></ion-thumbnail>
+                            <h1>Evie</h1>
                         </ion-item>
-                        
+                        <h1>A Bruxa Invernal</h1>
                         </ion-col>
                         
                 
               </ion-row>
             </ion-grid>
+
+            <ion-grid>
+
+                <ion-row>
+                  <ion-col align-self-center>
+                    <ion-item routerLink="/loja" routerDicetion="loja">
+                        <ion-thumbnail slot = "start">
+                        <ion-img src="\assets\Paladins\Flanco\Maeve\maeve.jpg"  ionError="Lobo"> </ion-img></ion-thumbnail>
+                        <h1 >Maeve </h1>
+                    </ion-item>
+                    <h1>Lâminas Mortais</h1>
+                    </ion-col>
+                    
+                        <ion-col align-self-center>
+                          <ion-item routerLink="/medicamentos" routerDicetion="medicamentos">
+                              <ion-thumbnail slot = "start">
+                              <ion-img src="\assets\Paladins\Flanco\Skye\skye.jpg" ionError="Lobo"> </ion-img></ion-thumbnail>
+                              <h1>Skye</h1>
+                          </ion-item>
+                          <h1>A Assassina do Crepúsculo</h1>
+                          </ion-col>
+                          
+                  
+                </ion-row>
+                 <ion-row>
+                  <ion-col align-self-center>
+                    <ion-item routerLink="/loja" routerDicetion="loja">
+                        <ion-thumbnail slot = "start">
+                        <ion-img src="\assets\Paladins\Flanco\Zhin\zhin.jpg"  ionError="Lobo"> </ion-img></ion-thumbnail>
+                        <h1 >Zhin </h1>
+                    </ion-item>
+                    <h1>O tirano</h1>
+                    </ion-col>
+                    
+      
+                </ion-row>
+              </ion-grid>
+              <h4> Campeões - Tanque</h4>
+              <ion-grid>
+                  <ion-row>
+                    <ion-col align-self-center name="Tyra"  id="Tyra">
+                      <ion-item routerLink="/Tyra" routerDicetion="Tyra">
+                        <ion-thumbnail slot = "start">
+                          <ion-img src="\assets\Paladins\Tank\Fernando\fernando.jpg" ionError="Tyra"> </ion-img></ion-thumbnail>
+                          <h1>Fernando</h1>
+                      </ion-item>
+                      <h1>O Auto-Proclamado Cavaleiro</h1>
+                      </ion-col>
+                      
+                      <ion-col align-self-center>
+                        <ion-item  routerLink="/tosas" routerDicetion="tosas">
+                            <ion-thumbnail slot = "start">
+      
+                            <ion-img src="\assets\Paladins\Tank\Inara\inara.png" ionError="Drogoz"> </ion-img></ion-thumbnail>
+                            
+                            <h1>Inara</h1>
+      
+                        </ion-item>
+                        <h1>A Guardiã de Pedra</h1>
+                        </ion-col>
+                          
+                  </ion-row>
+                </ion-grid>
+                  
+                <ion-grid>
+
+                    <ion-row>
+                        <ion-col align-self-center>
+                          <ion-item routerLink="/leva" routerDicetion="leva" >
+                              <ion-thumbnail slot = "start">
+                              <ion-img src="\assets\Paladins\Tank\Makoa\makoa.jpg" ionError="Cassie"> </ion-img></ion-thumbnail>
+                              <h1>Makoa</h1>
+                          </ion-item>
+                          <h1>O Ancião</h1>
+                          </ion-col>
+      
+                          <ion-col align-self-center>
+                            <ion-item routerLink="/entrega" routerDicetion="entrega">
+                                <ion-thumbnail slot = "start">
+                                <ion-img src="\assets\Paladins\Tank\Khan\khan.jpg" ionError="Lian"> </ion-img></ion-thumbnail>
+                                <h1>Khan</h1>
+                            </ion-item>
+                            <h1>Primaz da Casa Aico</h1>
+                            </ion-col>
+                           
+                              
+                      
+                    </ion-row>
+                  </ion-grid>
+                  <h4> Campeões - Suporte</h4>
+                  <ion-grid>
+      
+                    <ion-row>
+                      <ion-col align-self-center>
+                        <ion-item routerLink="/loja" routerDicetion="loja">
+                            <ion-thumbnail slot = "start">
+                            <ion-img src="\assets\Paladins\Flanco\Androxus\androxus.jpg"  ionError="Androxus"> </ion-img></ion-thumbnail>
+                            <h1 >Fúria  </h1>
+                        </ion-item>
+                        <h1>Anjo da Vingança</h1>
+                        </ion-col>
+                        
+                            <ion-col align-self-center>
+                              <ion-item routerLink="/medicamentos" routerDicetion="medicamentos">
+                                  <ion-thumbnail slot = "start">
+                                  <ion-img src="\assets\Paladins\Flanco\Evie\evie.jpg" ionError="Lobo"> </ion-img></ion-thumbnail>
+                                  <h1>IO </h1>
+                              </ion-item>
+                              <h1>A Deusa Despedaçada</h1>
+                              </ion-col>
+                              
+                      
+                    </ion-row>
+                  </ion-grid>
+      
+                  <ion-grid>
+      
+                      <ion-row>
+                        <ion-col align-self-center>
+                          <ion-item routerLink="/loja" routerDicetion="loja">
+                              <ion-thumbnail slot = "start">
+                              <ion-img src="\assets\Paladins\Flanco\Maeve\maeve.jpg"  ionError="Lobo"> </ion-img></ion-thumbnail>
+                              <h1 >Jenos  </h1>
+                          </ion-item>
+                          <h1>O Ascendido</h1>
+                          </ion-col>
+                          
+                              <ion-col align-self-center>
+                                <ion-item routerLink="/medicamentos" routerDicetion="medicamentos">
+                                    <ion-thumbnail slot = "start">
+                                    <ion-img src="\assets\Paladins\Flanco\Skye\skye.jpg" ionError="Lobo"> </ion-img></ion-thumbnail>
+                                    <h1>Pip </h1>
+                                </ion-item>
+                                <h1>O Alquimista Trapaceiro</h1>
+                                </ion-col>
+                                
+                        
+                      </ion-row>
+                       <ion-row>
+                        <ion-col align-self-center>
+                          <ion-item routerLink="/loja" routerDicetion="loja">
+                              <ion-thumbnail slot = "start">
+                              <ion-img src="\assets\Paladins\Flanco\Zhin\zhin.jpg"  ionError="Lobo"> </ion-img></ion-thumbnail>
+                              <h1 >Ying </h1>
+                          </ion-item>
+                          <h1>A FLOR</h1>
+                          </ion-col>
+                        </ion-row>
+                      </ion-grid>
     </ion-content>
     
