--- a/src/app/classes/classes.page.html
+++ b/src/app/classes/classes.page.html
@@ -31,18 +31,27 @@
       <ion-col align-self-center>
         <ion-item routerLink="#" routerDicetion="#">
             <ion-thumbnail slot = "start">
-            <ion-img src="/assets/smite/smitemago.png"  ionError="icon"> </ion-img></ion-thumbnail>
+            <ion-img src="/assets/smite/smiteguardiao.png"  ionError="icon"> </ion-img></ion-thumbnail>
             <h1 >Guardião</h1>
         </ion-item>
         </ion-col>
         <ion-col align-self-center>
           <ion-item routerLink="#" routerDicetion="#">
               <ion-thumbnail slot = "start">
-              <ion-img src="/assets/smite/smiteassassino.png"  ionError="icon"> </ion-img></ion-thumbnail>
+              <ion-img src="/assets/smite/smiteguerreiro.png"  ionError="icon"> </ion-img></ion-thumbnail>
               <h1 >Guerreiro</h1>
           </ion-item>
           </ion-col>
     </ion-row> 
+    <ion-row>
+      <ion-col align-self-center>
+        <ion-item routerLink="#" routerDicetion="#">
+            <ion-thumbnail slot = "start">
+            <ion-img src="/assets/smite/smitecacador.png"  ionError="icon"> </ion-img></ion-thumbnail>
+            <h1 >Caçador</h1>
+        </ion-item>
+        </ion-col>
+      </ion-row>
   </ion-grid> 
 </ion-content>
 
