--- a/src/app/Campeões/Campeões.page.html
+++ b/src/app/Campeões/Campeões.page.html
@@ -9,7 +9,9 @@
         </ion-toolbar>
       </ion-header>
     <ion-content>
+      <div class="tt">
         <h4> Campeões - Dano</h4>
+      </div>
         <ion-grid>
             <ion-row>
               <ion-col align-self-center name="Tyra"  id="Tyra">
@@ -18,11 +20,11 @@
                     <ion-img src="\assets\Paladins\Dano\Tyra\tyra.jpg" ionError="Tyra"> </ion-img></ion-thumbnail>
                     <h1>Tyra</h1>
                 </ion-item>
-                <h1>A Indomável</h1>
+                <h2>A Indomável</h2>
                 </ion-col>
                 
                 <ion-col align-self-center>
-                  <ion-item  routerLink="/tosas" routerDicetion="tosas">
+                  <ion-item  routerLink="/Drogoz" routerDicetion="Drogoz">
                       <ion-thumbnail slot = "start">
 
                       <ion-img src="\assets\Paladins\Dano\Drogoz\drogoz.jpg" ionError="Drogoz"> </ion-img></ion-thumbnail>
@@ -30,7 +32,7 @@
                       <h1>Drogoz</h1>
 
                   </ion-item>
-                  <h1>O Ganancioso</h1>
+                  <h2>O Ganancioso</h2>
                   </ion-col>
                     
             </ion-row>
@@ -39,21 +41,21 @@
           <ion-grid>
               <ion-row>
                   <ion-col align-self-center>
-                    <ion-item routerLink="/leva" routerDicetion="leva" >
+                    <ion-item routerLink="/Cassie" routerDicetion="Cassie" >
                         <ion-thumbnail slot = "start">
                         <ion-img src="\assets\Paladins\Dano\Cassie\cassie.jpg" ionError="Cassie"> </ion-img></ion-thumbnail>
                         <h1>Cassie</h1>
                     </ion-item>
-                    <h1>A Filha do Caçador</h1>
+                    <h2>A Filha do Caçador</h2>
                     </ion-col>
 
                     <ion-col align-self-center>
-                      <ion-item routerLink="/entrega" routerDicetion="entrega">
+                      <ion-item routerLink="/Lian" routerDicetion="Lian">
                           <ion-thumbnail slot = "start">
                           <ion-img src="\assets\Paladins\Dano\Lian\lian.jpg" ionError="Lian"> </ion-img></ion-thumbnail>
                           <h1>Lian</h1>
                       </ion-item>
-                      <h1>Herdeira da Casa Aico</h1>
+                      <h2>Herdeira da Casa Aico</h2>
                       </ion-col>
                      
                         
@@ -65,21 +67,21 @@
 
               <ion-row>
                 <ion-col align-self-center>
-                  <ion-item routerLink="/loja" routerDicetion="loja">
+                  <ion-item routerLink="/Androxus" routerDicetion="Androxus">
                       <ion-thumbnail slot = "start">
                       <ion-img src="\assets\Paladins\Flanco\Androxus\androxus.jpg"  ionError="Androxus"> </ion-img></ion-thumbnail>
                       <h1 >Androxus </h1>
                   </ion-item>
-                  <h1>Matador de Deuses</h1>
+                  <h2>Matador de Deuses</h2>
                   </ion-col>
                   
                       <ion-col align-self-center>
-                        <ion-item routerLink="/medicamentos" routerDicetion="medicamentos">
+                        <ion-item routerLink="/Evie" routerDicetion="Evie">
                             <ion-thumbnail slot = "start">
-                            <ion-img src="\assets\Paladins\Flanco\Evie\evie.jpg" ionError="Lobo"> </ion-img></ion-thumbnail>
+                            <ion-img src="\assets\Paladins\Flanco\Evie\evie.jpg" ionError="Evie"> </ion-img></ion-thumbnail>
                             <h1>Evie</h1>
                         </ion-item>
-                        <h1>A Bruxa Invernal</h1>
+                        <h2>A Bruxa Invernal</h2>
                         </ion-col>
                         
                 
@@ -90,33 +92,33 @@
 
                 <ion-row>
                   <ion-col align-self-center>
-                    <ion-item routerLink="/loja" routerDicetion="loja">
+                    <ion-item routerLink="/Maeve" routerDicetion="Maeve">
                         <ion-thumbnail slot = "start">
-                        <ion-img src="\assets\Paladins\Flanco\Maeve\maeve.jpg"  ionError="Lobo"> </ion-img></ion-thumbnail>
+                        <ion-img src="\assets\Paladins\Flanco\Maeve\maeve.jpg"  ionError="Maeve"> </ion-img></ion-thumbnail>
                         <h1 >Maeve </h1>
                     </ion-item>
-                    <h1>Lâminas Mortais</h1>
+                    <h2>Lâminas Mortais</h2>
                     </ion-col>
                     
                         <ion-col align-self-center>
-                          <ion-item routerLink="/medicamentos" routerDicetion="medicamentos">
+                          <ion-item routerLink="/Skye" routerDicetion="Skye">
                               <ion-thumbnail slot = "start">
-                              <ion-img src="\assets\Paladins\Flanco\Skye\skye.jpg" ionError="Lobo"> </ion-img></ion-thumbnail>
+                              <ion-img src="\assets\Paladins\Flanco\Skye\skye.jpg" ionError="Skye"> </ion-img></ion-thumbnail>
                               <h1>Skye</h1>
                           </ion-item>
-                          <h1>A Assassina do Crepúsculo</h1>
+                          <h2>A Assassina do Crepúsculo</h2>
                           </ion-col>
                           
                   
                 </ion-row>
                  <ion-row>
                   <ion-col align-self-center>
-                    <ion-item routerLink="/loja" routerDicetion="loja">
+                    <ion-item routerLink="/Zhin" routerDicetion="Zhin">
                         <ion-thumbnail slot = "start">
-                        <ion-img src="\assets\Paladins\Flanco\Zhin\zhin.jpg"  ionError="Lobo"> </ion-img></ion-thumbnail>
+                        <ion-img src="\assets\Paladins\Flanco\Zhin\zhin.jpg"  ionError="Zhin"> </ion-img></ion-thumbnail>
                         <h1 >Zhin </h1>
                     </ion-item>
-                    <h1>O tirano</h1>
+                    <h2>O tirano</h2>
                     </ion-col>
                     
       
@@ -125,25 +127,25 @@
               <h4> Campeões - Tanque</h4>
               <ion-grid>
                   <ion-row>
-                    <ion-col align-self-center name="Tyra"  id="Tyra">
-                      <ion-item routerLink="/Tyra" routerDicetion="Tyra">
+                    <ion-col align-self-center name="Fernando"  id="Fernando">
+                      <ion-item routerLink="/Fernando" routerDicetion="Fernando">
                         <ion-thumbnail slot = "start">
-                          <ion-img src="\assets\Paladins\Tank\Fernando\fernando.jpg" ionError="Tyra"> </ion-img></ion-thumbnail>
+                          <ion-img src="\assets\Paladins\Tank\Fernando\fernando.jpg" ionError="Fernando"> </ion-img></ion-thumbnail>
                           <h1>Fernando</h1>
                       </ion-item>
-                      <h1>O Auto-Proclamado Cavaleiro</h1>
+                      <h2>O Auto-Proclamado Cavaleiro</h2>
                       </ion-col>
                       
                       <ion-col align-self-center>
-                        <ion-item  routerLink="/tosas" routerDicetion="tosas">
+                        <ion-item  routerLink="/Inara" routerDicetion="Inara">
                             <ion-thumbnail slot = "start">
       
-                            <ion-img src="\assets\Paladins\Tank\Inara\inara.png" ionError="Drogoz"> </ion-img></ion-thumbnail>
+                            <ion-img src="\assets\Paladins\Tank\Inara\inara.png" ionError="Inara"> </ion-img></ion-thumbnail>
                             
                             <h1>Inara</h1>
       
                         </ion-item>
-                        <h1>A Guardiã de Pedra</h1>
+                        <h2>A Guardiã de Pedra</h2>
                         </ion-col>
                           
                   </ion-row>
@@ -153,21 +155,21 @@
 
                     <ion-row>
                         <ion-col align-self-center>
-                          <ion-item routerLink="/leva" routerDicetion="leva" >
+                          <ion-item routerLink="/Makoa" routerDicetion="Makoa" >
                               <ion-thumbnail slot = "start">
-                              <ion-img src="\assets\Paladins\Tank\Makoa\makoa.jpg" ionError="Cassie"> </ion-img></ion-thumbnail>
+                              <ion-img src="\assets\Paladins\Tank\Makoa\makoa.jpg" ionError="Makoa"> </ion-img></ion-thumbnail>
                               <h1>Makoa</h1>
                           </ion-item>
-                          <h1>O Ancião</h1>
+                          <h2>O Ancião</h2>
                           </ion-col>
       
                           <ion-col align-self-center>
-                            <ion-item routerLink="/entrega" routerDicetion="entrega">
+                            <ion-item routerLink="/Khan" routerDicetion="Khan">
                                 <ion-thumbnail slot = "start">
-                                <ion-img src="\assets\Paladins\Tank\Khan\khan.jpg" ionError="Lian"> </ion-img></ion-thumbnail>
+                                <ion-img src="\assets\Paladins\Tank\Khan\khan.jpg" ionError="Khan"> </ion-img></ion-thumbnail>
                                 <h1>Khan</h1>
                             </ion-item>
-                            <h1>Primaz da Casa Aico</h1>
+                            <h2>Primaz da Casa Aico</h2>
                             </ion-col>
                            
                               
@@ -179,21 +181,21 @@
       
                     <ion-row>
                       <ion-col align-self-center>
-                        <ion-item routerLink="/loja" routerDicetion="loja">
+                        <ion-item routerLink="/Fúria" routerDicetion="Fúria">
                             <ion-thumbnail slot = "start">
-                            <ion-img src="\assets\Paladins\Flanco\Androxus\androxus.jpg"  ionError="Androxus"> </ion-img></ion-thumbnail>
+                            <ion-img src="\assets\Paladins\Sup\Fúria\furia.jpg"  ionError="Fúria"> </ion-img></ion-thumbnail>
                             <h1 >Fúria  </h1>
                         </ion-item>
-                        <h1>Anjo da Vingança</h1>
+                        <h2>Anjo da Vingança</h2>
                         </ion-col>
                         
                             <ion-col align-self-center>
-                              <ion-item routerLink="/medicamentos" routerDicetion="medicamentos">
+                              <ion-item routerLink="/IO" routerDicetion="IO">
                                   <ion-thumbnail slot = "start">
-                                  <ion-img src="\assets\Paladins\Flanco\Evie\evie.jpg" ionError="Lobo"> </ion-img></ion-thumbnail>
+                                  <ion-img src="\assets\Paladins\Sup\IO\io.jpg" ionError="IO"> </ion-img></ion-thumbnail>
                                   <h1>IO </h1>
                               </ion-item>
-                              <h1>A Deusa Despedaçada</h1>
+                              <h2>A Deusa Despedaçada</h2>
                               </ion-col>
                               
                       
@@ -204,33 +206,33 @@
       
                       <ion-row>
                         <ion-col align-self-center>
-                          <ion-item routerLink="/loja" routerDicetion="loja">
+                          <ion-item routerLink="/Jenos" routerDicetion="Jenos">
                               <ion-thumbnail slot = "start">
-                              <ion-img src="\assets\Paladins\Flanco\Maeve\maeve.jpg"  ionError="Lobo"> </ion-img></ion-thumbnail>
+                              <ion-img src="\assets\Paladins\Sup\Jenos\jenos.jpg"  ionError="Jenos"> </ion-img></ion-thumbnail>
                               <h1 >Jenos  </h1>
                           </ion-item>
-                          <h1>O Ascendido</h1>
+                          <h2>O Ascendido</h2>
                           </ion-col>
                           
                               <ion-col align-self-center>
-                                <ion-item routerLink="/medicamentos" routerDicetion="medicamentos">
+                                <ion-item routerLink="/Pip" routerDicetion="Pip">
                                     <ion-thumbnail slot = "start">
-                                    <ion-img src="\assets\Paladins\Flanco\Skye\skye.jpg" ionError="Lobo"> </ion-img></ion-thumbnail>
+                                    <ion-img src="\assets\Paladins\Sup\Pip\pip.jpg" ionError="Pip"> </ion-img></ion-thumbnail>
                                     <h1>Pip </h1>
                                 </ion-item>
-                                <h1>O Alquimista Trapaceiro</h1>
+                                <h2>O Alquimista Trapaceiro</h2>
                                 </ion-col>
                                 
                         
                       </ion-row>
                        <ion-row>
                         <ion-col align-self-center>
-                          <ion-item routerLink="/loja" routerDicetion="loja">
+                          <ion-item routerLink="/Ying" routerDicetion="Ying">
                               <ion-thumbnail slot = "start">
-                              <ion-img src="\assets\Paladins\Flanco\Zhin\zhin.jpg"  ionError="Lobo"> </ion-img></ion-thumbnail>
+                              <ion-img src="\assets\Paladins\Sup\Ying\ying.jpg"  ionError="Ying"> </ion-img></ion-thumbnail>
                               <h1 >Ying </h1>
                           </ion-item>
-                          <h1>A FLOR</h1>
+                          <h2>A FLOR</h2>
                           </ion-col>
                         </ion-row>
                       </ion-grid>
