--- a/src/app/Campeões/Campeões.page.scss
+++ b/src/app/Campeões/Campeões.page.scss
@@ -12,7 +12,24 @@ ion-item{
 }
 h1{
     margin-left: 5px;
+    font-size: 18pt
+}
+
+h2{
+    margin-left: 92px;
     font-size: 15pt
 }
+h4{
+   
+    padding-left: 55px;
+    font-weight: bold;
+    background-color: skyblue;
+    width: 100%;
+    
+}
+.tt{
+ 
+}
+
 
 
