--- a/src/app/Mago/Mago.page.html
+++ b/src/app/Mago/Mago.page.html
@@ -9,16 +9,19 @@
   </ion-toolbar>
 </ion-header>
 
+
 <ion-content>
-  <ion-grid>
-    <ion-row>
-      <ion-col align-self-center>
-        <ion-item routerLink="/Mago" routerDicetion="Mago">
-            <ion-thumbnail slot = "start">
-            <ion-img src="/assets/smite/Mago/Chronos.jpg"  ionError="icon"> </ion-img></ion-thumbnail>
-            <h1 >Chronos</h1>
-        </ion-item>
-        </ion-col>
-      </ion-row>
-   <ion-grid>
+    <ion-grid>
+        <ion-row>
+                <ion-col align-self-center>
+                  <ion-item routerLink="#" routerDicetion="#">
+                      <ion-thumbnail slot = "start">
+                      <ion-img src="/assets/smite/Mago/Chronos.jpg"  ionError="icon"> </ion-img></ion-thumbnail>
+                      <h1 >Chronos</h1>
+                  </ion-item>
+                  </ion-col>
+                </ion-row>
+      </ion-grid>
+  
+ 
 </ion-content>
