--- a/src/app/classes/classes.page.html
+++ b/src/app/classes/classes.page.html
@@ -13,7 +13,7 @@
   <ion-grid>
     <ion-row>
       <ion-col align-self-center>
-        <ion-item routerLink="#" routerDicetion="#">
+        <ion-item routerLink="/Mago" routerDicetion="/Mago">
             <ion-thumbnail slot = "start">
             <ion-img src="/assets/smite/smitemago.png"  ionError="icon"> </ion-img></ion-thumbnail>
             <h1 >Mago</h1>
