--- a/src/app/Campeões/Campeões.page.scss
+++ b/src/app/Campeões/Campeões.page.scss
@@ -3,13 +3,6 @@ ion-col{
     margin-left: 0px;
 }
 
-ion-img{
-  
-    
-}
-ion-item{
-    
-}
 h1{
     margin-left: 5px;
     font-size: 18pt
@@ -23,13 +16,11 @@ h4{
    
     padding-left: 55px;
     font-weight: bold;
-    background-color: skyblue;
+    background-image: linear-gradient( 109.6deg,  rgba(156,252,248,1) 11.2%, rgba(110,123,251,1) 91.1% );
     width: 100%;
     
 }
-.tt{
- 
-}
+
 
 
 
