--- a/src/app/Mago/Mago.page.html
+++ b/src/app/Mago/Mago.page.html
@@ -20,8 +20,31 @@
                       <h1 >Chronos</h1>
                   </ion-item>
                   </ion-col>
+                  <ion-col align-self-center>
+                    <ion-item routerLink="#" routerDicetion="#">
+                        <ion-thumbnail slot = "start">
+                        <ion-img src="/assets/smite/Mago/Hades.jpg"  ionError="icon"> </ion-img></ion-thumbnail>
+                        <h1 >Hades</h1>
+                    </ion-item>
+                    </ion-col>
                 </ion-row>
+                
+                <ion-row>
+                  <ion-col align-self-center>
+                    <ion-item routerLink="#" routerDicetion="#">
+                        <ion-thumbnail slot = "start">
+                        <ion-img src="/assets/smite/Mago/Poseidon.jpg"  ionError="icon"> </ion-img></ion-thumbnail>
+                        <h1 >Poseidon</h1>
+                    </ion-item>
+                    </ion-col>
+                    <ion-col align-self-center>
+                      <ion-item routerLink="#" routerDicetion="#">
+                          <ion-thumbnail slot = "start">
+                          <ion-img src="/assets/smite/Mago/Zeus.jpg"  ionError="icon"> </ion-img></ion-thumbnail>
+                          <h1 >Zeus</h1>
+                      </ion-item>
+                      </ion-col>
+                  </ion-row>
+
       </ion-grid>
-  
- 
 </ion-content>
