Criado a pag champ

--- a/src/app/Campeões/Campeões.page.html
+++ b/src/app/Campeões/Campeões.page.html
@@ -4,7 +4,7 @@
             <ion-menu-button></ion-menu-button>
           </ion-buttons>
           <ion-title>
-            Campeões - Paladins
+            Campeões 
           </ion-title>
         </ion-toolbar>
       </ion-header>
