--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -29,9 +29,9 @@
 
       <ion-label>Smite</ion-label>
       </ion-item>
-      <ion-item href="https://www.paladins.com/">
+      <ion-item  id="pl" href="https://www.paladins.com/">
         <img src="assets/Paladins/icon.png">
-        <ion-label>Paladins</ion-label>
+        <ion-label><h5>Paladins</h5> </ion-label>
       </ion-item>
       
     </ion-list>
