--- a/src/app/classes/classes.page.html
+++ b/src/app/classes/classes.page.html
@@ -20,7 +20,7 @@
         </ion-item>
         </ion-col>
         <ion-col align-self-center>
-          <ion-item routerLink="#" routerDicetion="#">
+          <ion-item routerLink="/Assassino" routerDicetion="/Assassino">
               <ion-thumbnail slot = "start">
               <ion-img src="/assets/smite/smiteassassino.png"  ionError="icon"> </ion-img></ion-thumbnail>
               <h1 >Assassino</h1>
@@ -29,14 +29,14 @@
     </ion-row> 
     <ion-row>
       <ion-col align-self-center>
-        <ion-item routerLink="#" routerDicetion="#">
+        <ion-item routerLink="/Guardião" routerDicetion="/Guardião">
             <ion-thumbnail slot = "start">
             <ion-img src="/assets/smite/smiteguardiao.png"  ionError="icon"> </ion-img></ion-thumbnail>
             <h1 >Guardião</h1>
         </ion-item>
         </ion-col>
         <ion-col align-self-center>
-          <ion-item routerLink="#" routerDicetion="#">
+          <ion-item routerLink="/Guerreiro" routerDicetion="/Guerreiro">
               <ion-thumbnail slot = "start">
               <ion-img src="/assets/smite/smiteguerreiro.png"  ionError="icon"> </ion-img></ion-thumbnail>
               <h1 >Guerreiro</h1>
@@ -45,7 +45,7 @@
     </ion-row> 
     <ion-row>
       <ion-col align-self-center>
-        <ion-item routerLink="#" routerDicetion="#">
+        <ion-item routerLink="/Cacador" routerDicetion="/Cacador">
             <ion-thumbnail slot = "start">
             <ion-img src="/assets/smite/smitecacador.png"  ionError="icon"> </ion-img></ion-thumbnail>
             <h1 >Caçador</h1>
