--- a/src/app/Campeões/Campeões.page.html
+++ b/src/app/Campeões/Campeões.page.html
@@ -4,13 +4,13 @@
             <ion-menu-button></ion-menu-button>
           </ion-buttons>
           <ion-title>
-            Campeões 
+            Classes
           </ion-title>
         </ion-toolbar>
       </ion-header>
     <ion-content>
       <div class="tt">
-        <h4> Campeões - Dano</h4>
+        <h4>  Dano</h4>
       </div>
         <ion-grid>
             <ion-row>
@@ -62,7 +62,9 @@
                 
               </ion-row>
             </ion-grid>
-            <h4> Campeões - Flanco</h4>
+            <div class="tt">
+            <h4> Flanco</h4>
+            </div>
             <ion-grid>
 
               <ion-row>
@@ -124,7 +126,9 @@
       
                 </ion-row>
               </ion-grid>
-              <h4> Campeões - Tanque</h4>
+              <div class="tt">
+              <h4>  Tanque</h4>
+              </div>
               <ion-grid>
                   <ion-row>
                     <ion-col align-self-center name="Fernando"  id="Fernando">
@@ -176,7 +180,9 @@
                       
                     </ion-row>
                   </ion-grid>
-                  <h4> Campeões - Suporte</h4>
+                  <div class="tt">
+                  <h4> Suporte</h4>
+                  </div>
                   <ion-grid>
       
                     <ion-row>
