--- a/src/app/Campeões/Campeões.page.scss
+++ b/src/app/Campeões/Campeões.page.scss
@@ -1,3 +1,22 @@
+.tt{
+    background: #1A2980;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #26D0CE, #1A2980);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #26D0CE, #1A2980); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+    
+    width: 100%;
+
+}
+h4{
+    margin-left: auto;
+    margin-right: auto;
+    width: 3.7em;
+    color: white;
+
+}
+h2{
+    margin-left: 88px;
+}
 
 
 
