--- a/src/app/CampeõesResumo/CampeõesResumo.page.html
+++ b/src/app/CampeõesResumo/CampeõesResumo.page.html
@@ -17,6 +17,13 @@
                 <ion-img src="\assets\Paladins\Dano\Tyra\tyra.png" ionError="tyra"> </ion-img>
               
             </ion-item>
+            <h2>Tyra</h2>
+            
+            <h2>A Indomável</h2>
+            <h2>Dano</h2>
+          
+           <br>
+            
             <h1>Hitória</h1>
             <h3>
                 Criada para atirar impiedosamente e sobreviver aos duros invernos da fronteira, Tyra juntou-se ao exército do Magistrado ainda muito jovem. Após a desastrosa missão final dos Sentinelas, ela voltou à sua terra natal para levar a vida a caçar os monstros que habitam as bordas do Reino e aterrorizam as pessoas comuns. A sua resistência fora de série e a sua precisão cirúrgica com o rifle caíram como uma luva para a sua nova empreitada: ajudar a Resistência a contra-atacar o Magistrado e pôr um ponto final na guerra que assola o Reino.
@@ -42,22 +49,25 @@
         <ion-card>
             <ion-card-header>
                 <ion-img src="\assets\Paladins\Dano\Tyra\Legends\marca.png" ionError="Tyra"> </ion-img>
-              <ion-card-title>QUEIME, MONSTRO!</ion-card-title>
+              <ion-card-title>EQUIPE DE CAÇA</ion-card-title>
             </ion-card-header>
           
             <ion-card-content>
-                A Bomba Incendiária agora debilita os inimigos e causa 50% mais dano.
+              A Marca da Caçadora agora tem duas cargas e beneficia também aliados. Ela tem o intervalo 2s menor e o bônus do dano aumenta em 25%.
             </ion-card-content>
-            <ion-card-header>
-                <ion-img src="\assets\Paladins\Dano\Tyra\Legends\grana.png" ionError="Tyra"> </ion-img>
-              <ion-card-title>QUEIME, MONSTRO!</ion-card-title>
-            </ion-card-header>
-          
-            <ion-card-content>
-                A Bomba Incendiária agora debilita os inimigos e causa 50% mais dano.
-            </ion-card-content>
-
           </ion-card>
+            <ion-card>
+              
+              <ion-card-header>
+                  <ion-img src="\assets\Paladins\Dano\Tyra\Legends\grana.png" ionError="Tyra"> </ion-img>
+                <ion-card-title>MISERICÓRDIA</ion-card-title>
+              </ion-card-header>
+            
+              <ion-card-content>
+                  Lança-granadas agora tem 3 cargas.
+              </ion-card-content> 
+              
+            </ion-card>
         
         
 </ion-content>
