--- a/src/app/Assassino/Assassino.page.html
+++ b/src/app/Assassino/Assassino.page.html
@@ -13,14 +13,14 @@
   <ion-grid>
       <ion-row>
               <ion-col align-self-center>
-                <ion-item routerLink="#" routerDicetion="#">
+                <ion-item routerLink="/Arachne" routerDicetion="Arachne">
                     <ion-thumbnail slot = "start">
                     <ion-img src="/assets/smite/Assassino/Arachne.jpg"  ionError="icon"> </ion-img></ion-thumbnail>
                     <h1 >Arachne</h1>
                 </ion-item>
                 </ion-col>
                 <ion-col align-self-center>
-                  <ion-item routerLink="#" routerDicetion="#">
+                  <ion-item routerLink="/Fenrir" routerDicetion="/Fenrir">
                       <ion-thumbnail slot = "start">
                       <ion-img src="/assets/smite/Assassino/Fenrir.jpg"  ionError="icon"> </ion-img></ion-thumbnail>
                       <h1 >Fenrir</h1>
@@ -30,14 +30,14 @@
               
               <ion-row>
                 <ion-col align-self-center>
-                  <ion-item routerLink="#" routerDicetion="#">
+                  <ion-item routerLink="/Loki" routerDicetion="/Loki">
                       <ion-thumbnail slot = "start">
                       <ion-img src="/assets/smite/Assassino/Loki.jpg"  ionError="icon"> </ion-img></ion-thumbnail>
                       <h1 >Loki</h1>
                   </ion-item>
                   </ion-col>
                   <ion-col align-self-center>
-                    <ion-item routerLink="#" routerDicetion="#">
+                    <ion-item routerLink="/Thor" routerDicetion="/Thor">
                         <ion-thumbnail slot = "start">
                         <ion-img src="/assets/smite/Assassino/Thor.jpg"  ionError="icon"> </ion-img></ion-thumbnail>
                         <h1 >Thor</h1>
