--- a/src/app/Guardião/Guardião.page.html
+++ b/src/app/Guardião/Guardião.page.html
@@ -14,14 +14,14 @@
     <ion-grid>
         <ion-row>
                 <ion-col align-self-center>
-                  <ion-item routerLink="#" routerDicetion="#">
+                  <ion-item routerLink="/Athena" routerDicetion="/Athena">
                       <ion-thumbnail slot = "start">
                       <ion-img src="/assets/smite/Guardião/athena.jpg"  ionError="icon"> </ion-img></ion-thumbnail>
                       <h1 >Athena</h1>
                   </ion-item>
                   </ion-col>
                   <ion-col align-self-center>
-                    <ion-item routerLink="#" routerDicetion="#">
+                    <ion-item routerLink="/Cerberus" routerDicetion="/Cerberus">
                         <ion-thumbnail slot = "start">
                         <ion-img src="/assets/smite/Guardião/Cerberus.jpg"  ionError="icon"> </ion-img></ion-thumbnail>
                         <h1 >Cerberus</h1>
@@ -31,7 +31,7 @@
                 
                 <ion-row>
                   <ion-col align-self-center>
-                    <ion-item routerLink="#" routerDicetion="#">
+                    <ion-item routerLink="/Ganesha" routerDicetion="/Ganesha">
                         <ion-thumbnail slot = "start">
                         <ion-img src="/assets/smite/Guardião/Ganesha.jpg"  ionError="icon"> </ion-img></ion-thumbnail>
                         <h1 >Ganesha</h1>
