--- a/src/app/Mago/Mago.page.html
+++ b/src/app/Mago/Mago.page.html
@@ -14,14 +14,14 @@
     <ion-grid>
         <ion-row>
                 <ion-col align-self-center>
-                  <ion-item routerLink="#" routerDicetion="#">
+                  <ion-item routerLink="/Chronos" routerDicetion="/Chronos">
                       <ion-thumbnail slot = "start">
                       <ion-img src="/assets/smite/Mago/Chronos.jpg"  ionError="icon"> </ion-img></ion-thumbnail>
                       <h1 >Chronos</h1>
                   </ion-item>
                   </ion-col>
                   <ion-col align-self-center>
-                    <ion-item routerLink="#" routerDicetion="#">
+                    <ion-item routerLink="/Hades" routerDicetion="/Hades">
                         <ion-thumbnail slot = "start">
                         <ion-img src="/assets/smite/Mago/Hades.jpg"  ionError="icon"> </ion-img></ion-thumbnail>
                         <h1 >Hades</h1>
@@ -31,14 +31,14 @@
                 
                 <ion-row>
                   <ion-col align-self-center>
-                    <ion-item routerLink="#" routerDicetion="#">
+                    <ion-item routerLink="/Poseidon" routerDicetion="/Poseidon">
                         <ion-thumbnail slot = "start">
                         <ion-img src="/assets/smite/Mago/Poseidon.jpg"  ionError="icon"> </ion-img></ion-thumbnail>
                         <h1 >Poseidon</h1>
                     </ion-item>
                     </ion-col>
                     <ion-col align-self-center>
-                      <ion-item routerLink="#" routerDicetion="#">
+                      <ion-item routerLink="/Zeus" routerDicetion="/Zeus">
                           <ion-thumbnail slot = "start">
                           <ion-img src="/assets/smite/Mago/Zeus.jpg"  ionError="icon"> </ion-img></ion-thumbnail>
                           <h1 >Zeus</h1>
